--- a/Backend/requirements.txt
+++ b/Backend/requirements.txt
@@ -9,4 +9,5 @@ passlib[bcrypt]==1.7.4
 python-multipart==0.0.6
 email-validator==2.0.0
 redis>=5.0.0
-google-generativeai>=0.3.0 
+google-generativeai>=0.3.0
+youtube-transcript-api>=0.6.0 
