--- a/Backend/requirements.txt
+++ b/Backend/requirements.txt
@@ -10,4 +10,6 @@ python-multipart==0.0.6
 email-validator==2.0.0
 redis>=5.0.0
 google-generativeai>=0.3.0
-youtube-transcript-api>=0.6.0 
+youtube-transcript-api>=0.6.0
+requests>=2.28.0
+yt-dlp>=2023.9.24 
