--- a/socratic-frontend/Dockerfile
+++ b/socratic-frontend/Dockerfile
@@ -18,8 +18,8 @@ FROM nginx:stable-alpine
 # Copy built files from build stage
 COPY --from=build /app/build /usr/share/nginx/html
 
-# Copy custom nginx config if needed
-# COPY nginx.conf /etc/nginx/conf.d/default.conf
+# Copy custom nginx config
+COPY nginx.conf /etc/nginx/conf.d/default.conf
 
 # Expose port 80
 EXPOSE 80
