--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ version: '3.8'
 services:
   postgres:
     image: postgres:15-alpine
-    container_name: socratic-postgres
+    container_name: postgres
     environment:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: postgres
@@ -21,7 +21,7 @@ services:
 
   redis:
     image: redis
-    container_name: socratic-redis
+    container_name: redis
     ports:
       - "6379:6379"
     restart: unless-stopped
@@ -32,4 +32,4 @@ services:
       retries: 3
 
 volumes:
-  postgres_data: 
+  postgres_data:
